@@ -1,9 +1,11 @@
 package org.hdf5javalib.examples;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.ByteBuffer;
 import java.nio.channels.SeekableByteChannel;
+import java.nio.file.Files;
 
 /**
  * Utility class for loading resources into a MemorySeekableByteChannel.
@@ -13,26 +15,22 @@ public class ResourceLoader {
     /**
      * Loads  * Loads a resource from the classpath into a MemorySeekableByteChannel.
      *
-     * @param resourcePath the path to the resource (e.g., "data/testfile.h5")
+     * @param resourceName the path to the resource (e.g., "data/testfile.h5")
      * @return a MemorySeekableByteChannel containing the resource data
      * @throws IOException if the resource is not found or cannot be read
      */
-    public static SeekableByteChannel loadResourceAsChannel(String resourcePath) throws IOException {
-        try (InputStream inputStream = ResourceLoader.class.getClassLoader().getResourceAsStream(resourcePath)) {
-            if (inputStream == null) {
-                throw new IOException("Resource not found: " + resourcePath);
-            }
+    public static SeekableByteChannel loadResourceAsChannel(String resourceName) throws IOException {
+        String absPath = new File("src/test/resources/" + resourceName).getAbsolutePath();
 
-            // Read the resource into a byte array
-            byte[] data = inputStream.readAllBytes();
+        // Read the resource into a byte array
+        byte[] data = Files.readAllBytes(new File(absPath).toPath());
 
-            // Create a MemorySeekableByteChannel with sufficient capacity
-            MemorySeekableByteChannel channel = new MemorySeekableByteChannel(data.length);
-            channel.write(ByteBuffer.wrap(data));
+        // Create a MemorySeekableByteChannel with sufficient capacity
+        MemorySeekableByteChannel channel = new MemorySeekableByteChannel(data.length);
+        channel.write(ByteBuffer.wrap(data));
 
-            // Reset position to the beginning
-            channel.position(0);
-            return channel;
-        }
+        // Reset position to the beginning
+        channel.position(0);
+        return channel;
     }
 }
